<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="createRecipeViewModel"
            type="com.example.favouriterecipes.viewmodels.CreateRecipeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/roboto"
            android:text="@string/create_recipe_title"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:ems="10"
            android:hint="@string/hint_recipe_name"
            android:inputType="textPersonName"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/edit_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_recipe_desc"
            android:inputType="textMultiLine"
            android:textSize="26sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:text="@string/create_recipe_button"
            android:textSize="20sp"/>
    </LinearLayout>

</layout>