<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="selectedRecipeViewModel"
            type="com.example.favouriterecipes.viewmodels.SelectedRecipeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/selected_recipe_title"
            style="@style/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_recipe_title" />

        <TextView
            android:id="@+id/recipe_name"
            style="@style/recipe_datas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{selectedRecipeViewModel.selectedRecipe.recipeName}" />

        <TextView
            android:id="@+id/recipe_description"
            style="@style/recipe_datas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{selectedRecipeViewModel.selectedRecipe.recipeDescription}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/edit_button_title"
                app:layout_constraintEnd_toStartOf="@+id/remove_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/delete_button_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_button"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> selectedRecipeViewModel.deleteSelectedRecipe()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>